--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,16 +1,18 @@
 nelmio_cors:
   defaults:
-    allow_credentials: false
-    allow_origin: []
-    allow_headers: []
-    allow_methods: []
-    expose_headers: []
-    max_age: 0
+    allow_credentials: true
+    allow_origin: ["https://frontend-a65.pages.dev"]
+    allow_headers: ["Content-Type", "Authorization"]
+    allow_methods: ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+    expose_headers: ["Content-Type", "Authorization"]
+    max_age: 3600
     hosts: []
     origin_regex: false
+
   paths:
     "^/":
-      allow_origin: ["*"]
-      allow_headers: ["*"]
-      allow_methods: ["POST", "PUT", "GET", "DELETE"]
+      allow_origin: ["https://frontend-a65.pages.dev"]
+      allow_headers: ["Content-Type", "Authorization"]
+      allow_methods: ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+      expose_headers: ["Content-Type", "Authorization"]
       max_age: 3600
